# serde_toon

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: encode_decode.rs  github_repos.rs  peanuts_characters.rs  peanuts_jsonld.rs  peanuts_specials.rs  peanuts_universe.rs  src2_canonical.rs
benchmarks/: flamegraph_to_csv.py  profile_decode.rs  profile_encode.rs  run_profiles.sh
benchmarks/data/: peanuts_characters.json  peanuts_characters.toon  peanuts_jsonld.json  peanuts_jsonld.toon  peanuts_specials.json  peanuts_specials.toon  peanuts_universe.json  peanuts_universe.toon
benchmarks/profiles/: encode_github.nodes.csv  encode_github.top.json
benchmarks/toon/: Cargo.toml
benchmarks/toon/benches/: github_repos.rs
benchmarks/toon/src/: lib.rs
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/tests/: cli.rs
profiles/: encode_github.top.json
scripts/: flamegraph_to_csv.py
specs/src3-v3/: design.md  requirements.md  tasks.md
src/: PLAN.md  constants.rs  error.rs  lib.rs  options.rs  serde.rs
src/arena/: mod.rs
src/canonical/: mod.rs  profile.rs
src/decode/: expansion.rs  mod.rs  parser.rs  pool.rs  scan.rs  scanner.rs  serde.rs  validation.rs
src/encode/: folding.rs  mod.rs  writer.rs
src/num/: number.rs
src/serde/: de.rs  ser.rs
src/tabular/: mod.rs
src/text/: string.rs
src/types/: delimiter.rs  errors.rs  folding.rs  mod.rs  options.rs  value.rs
src/utils/: literal.rs  mod.rs  number.rs  string.rs  text.rs  validation.rs
src2/: V2_NOTES.md  lib.rs
src2/canonical/: arena.rs  decode.rs  encode.rs  mod.rs  parse.rs  profile.rs  scan.rs  serde.rs  validate.rs
src2/parallel/: decode.rs  encode.rs  mod.rs
tests/: TEST_ENABLEMENT.md  conformance.rs  fixtures.rs  spec_02_data_model.rs  spec_03_encoding_normalization.rs  spec_04_decoding_interpretation.rs  spec_05_concrete_syntax_root.rs  spec_06_header_syntax.rs  spec_07_strings_keys.rs  spec_08_objects.rs  spec_09_arrays.rs  spec_10_objects_list_items.rs  spec_11_delimiters.rs  spec_12_indentation_whitespace.rs  spec_13_conformance_and_options.rs  spec_14_strict_mode.rs  spec_15_security.rs  spec_16_internationalization.rs
tools/: profile_decode.rs  profile_encode.rs
