[package]
name = "serde_toon"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Serde-compatible TOON v3.0 encoder/decoder"
autobenches = false
readme = "README.md"
repository = "https://github.com/bnomei/serde_toon"
documentation = "https://docs.rs/serde_toon"

[lib]
name = "serde_toon"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"
itoa = "1.0"
ryu = "1.0"
indexmap = "2.2"
rayon = { version = "1.10", optional = true }
memchr = "2.7"
smallvec = "1.13"
smol_str = "0.3"
csv = "1.4"
regex = "1.12"
roxmltree = "0.21"

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
criterion = "0.5"
rstest = "0.18"
pprof = { version = "0.15", features = ["flamegraph"] }

[[example]]
name = "profile_encode"
path = "tools/profile_encode.rs"

[[example]]
name = "profile_decode"
path = "tools/profile_decode.rs"

[[bench]]
name = "src2_canonical"
path = "benches/src2_canonical.rs"
harness = false

[[bench]]
name = "encode_decode"
path = "benches/encode_decode.rs"
harness = false

[[bench]]
name = "github_repos"
path = "benches/github_repos.rs"
harness = false

[[bench]]
name = "peanuts_characters"
path = "benches/peanuts_characters.rs"
harness = false

[[bench]]
name = "peanuts_specials"
path = "benches/peanuts_specials.rs"
harness = false

[[bench]]
name = "peanuts_universe"
path = "benches/peanuts_universe.rs"
harness = false

[[bench]]
name = "peanuts_jsonld"
path = "benches/peanuts_jsonld.rs"
harness = false
