[package]
name = "serde_toon_format_cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Command-line interface for TOON encoding/decoding"

[[bin]]
name = "toon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_toon = { package = "serde_toon_format", version = "0.1.0" }
tiktoken-rs = "0.9.1"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.0"
tempfile = "3.10.1"
