[package]
name = "toon-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
toon = "0.1.2"
toon-format = "0.4.1"
serde_toon_v3 = { package = "serde_toon_format", path = "../.." }
serde_toon_v2 = { package = "serde_toon", version = "0.2.0" }
json2toon_rs = "0.2.0"
toon_rs = { package = "toon-rs", version = "2.1.0" }
toon_rust = { package = "toon-rust", version = "0.1.3", features = ["serde"] }
rtoon = "0.2.1"
tiktoken-rs = "0.9.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "github_repos"
path = "benches/github_repos.rs"
harness = false
